finialize RedTie components

--- a/Angular/Demo1/src/app/app.component.html
+++ b/Angular/Demo1/src/app/app.component.html
@@ -1,4 +1,10 @@
-<app-header></app-header>
-<app-sidemenu></app-sidemenu>
-<app-maintext></app-maintext>
-<app-footer></app-footer>
+<div id="page" align="center">
+    <div id="content" style="width:800px">
+        <app-header>
+
+        </app-header>
+        <app-sidemenu></app-sidemenu>
+        <app-maintext></app-maintext>
+        <app-footer></app-footer>
+    </div>
+</div>
